<resources>
    <string name="app_name">Led Control</string>

    <string name="dialogHelpBoutonInvalide">Mauvais bouton !!</string>
    <string name="dialogHelpTitle">AIDE</string>
    <string name="dialogHelpContent">"Deux choix possibles : \n- Connexion par Bluetooth \n- Connexion par HTTP\n\n Cela vous a t-il aider ?"</string>
    <string name="dialogHelpPositive">OUI</string>
    <string name="dialogHelpNegative">NON</string>

    <string name="boutonHelp">Aide</string>
    <string name="boutonHttp">Http</string>
    <string name="buttonScan">Scan</string>
    <string name="boutonScan">Scan</string>
    <string name="boutonLed">Change etat led</string>
    <string name="buttonDeco">Deconnexion</string>
    <string name="boutonRefresh">Refresh</string>
    <string name="boutonEtat">Changer d\'Etat</string>

    <string name="bleScanResult">Error ble scan</string>
    <string name="id">id</string>
    <string name="connection">Connexion en cours…</string>
    <string name="on">ON</string>
    <string name="unknowDevice">Aucun périphérique connu</string>
    <string name="dialogHttpTitle">Erreur de connexion au serveur</string>
    <string name="dialogHttpContent"> Vérifiez votre connection internet\nVoulez-vous réessayer ?</string>
    <string name="dialogHttpPositive">OUI</string>
    <string name="dialogHttpNegative">NON</string>
    <string name="connectedTo">connecté à : \  </string>
    <string name="dialogScanErrorConnectionTitle">Erreur de connection</string>
    <string name="dialogScanErrorConnectionContent">Impossible de se connecter au périphérique.</string>
    <string name="dialogScanErrorConnectionPositive">RETOUR</string>
    <string name="dialogScanUUIDTitle">UUID introuvable</string>
    <string name="dialogScanUUIDContent">L\'UUID du périphérique est introuvable.</string>
    <string name="dialogScanUUIDPositive">RETOUR</string>
    <string name="dialogScanVersionTitle">Mauvaise Version</string>
    <string name="dialogScanVersionContent">La version de votre téléphone n\'est pas compatible avec notre application</string>
    <string name="dialogScanVersionPositive">RETOUR</string>
    <string name="dialogScanErrorScanTitle">Erreur pendant le scan</string>
    <string name="dialogScanErrorScanPositive">RELANCER</string>
    <string name="dialogScanErrorScanNegative">FERMER</string>
    <string name="connected">Connecté</string>
    <string name="dialogScanLocalisationTitle">Localisation</string>
    <string name="dialogScanLocalisationContent">L\'application à besoin de votre localisation pour détecter les périphérique autour de vous.</string>
    <string name="dialogScanLocalisationPositive">ACTIVER LA LOCALISATION</string>
    <string name="dialogScanLocalisationNegative">REFUSER</string>
    <string name="dialogScanLocalisationRefuseTitle">Localisation</string>
    <string name="dialogScanLocalisationRefuseContent">Etes-vous sûr ? \n Vous ne pourrez pas utiliser l\'application</string>
    <string name="dialogScanBluetoothTitle">Bluetooth</string>
    <string name="dialogScanBluetoothContent">L\'application nécessite l\'activation du bluetooth.</string>
    <string name="dialogScanBluetoothPositive">OK</string>
</resources>
