<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <!--
        Zone de commentaire
    -->

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginImageESEO"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/eseo_couleurs">
    </ImageView>

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boutonHelp"
        android:textSize="@dimen/sizeTextButtonHelp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    </Button>

    <Button
        android:id="@+id/buttonHttp"
        android:layout_width="@dimen/matchContraint"
        android:layout_height="wrap_content"
        android:text="@string/boutonHttp"
        android:textSize="@dimen/sizeTextButtonHttp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonScan">

    </Button>

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="@dimen/matchContraint"
        android:layout_height="wrap_content"
        android:text="@string/buttonScan"
        android:textSize="@dimen/sizeTextButtonScan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonHttp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>