<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanActivity">

    <ListView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/matchContraint"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonScan"
        tools:listitem="@layout/list_item">

    </ListView>

    <TextView
        android:id="@+id/textConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textAlignment="center"
        android:textSize="@dimen/sizeTextConnection"
        android:layout_marginTop="@dimen/marginTextConnection"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonScan"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/buttonDeconnection">
    </Button>

    <ImageView
        android:id="@+id/ledOn"
        android:layout_width="@dimen/imageLedWidth"
        android:layout_height="@dimen/imageLedHeigth"
        android:visibility="gone"
        android:src="@drawable/ic_flash_on_24px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/ledOff"
        android:layout_width="@dimen/imageLedWidth"
        android:layout_height="@dimen/imageLedHeigth"
        android:visibility="gone"
        android:src="@drawable/ic_flash_off_24px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/buttonLed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonLed"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonDeconnection"
        >
    </Button>

    <Button
        android:id="@+id/buttonDeconnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonDeco"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>